[gd_scene load_steps=25 format=2]

[ext_resource path="res://Assets/Art Assets/Mech/Mech_Activate(1).png" type="Texture" id=1]
[ext_resource path="res://Assets/Art Assets/Mech/Mech_Hover.png" type="Texture" id=2]
[ext_resource path="res://Assets/Scripts/Player/Mech/Mech.gd" type="Script" id=3]
[ext_resource path="res://Assets/Scripts/Player/Mech/MechStateMachine.gd" type="Script" id=4]
[ext_resource path="res://Assets/Scripts/Player/Mech/States/MechNotActive.gd" type="Script" id=5]
[ext_resource path="res://Assets/Scripts/Player/Mech/States/MechHovering.gd" type="Script" id=6]
[ext_resource path="res://Assets/Scripts/Utility/Hitbox.gd" type="Script" id=7]
[ext_resource path="res://Assets/Scripts/Utility/ActivationArea.gd" type="Script" id=8]
[ext_resource path="res://Assets/Scripts/Player/Mech/MechAnimationPlayer.gd" type="Script" id=9]

[sub_resource type="Shader" id=7]
code = "shader_type canvas_item;
uniform sampler2D NOISE_PATTERN1;
uniform sampler2D NOISE_PATTERN2;
uniform sampler2D TRANSPARENCY_VARIATION;
uniform vec2 scroll1 = vec2(-1.0, 0);
uniform vec2 scroll2 = vec2(-0.2, 0);

uniform vec4 color1 : hint_color;
uniform vec4 color2 : hint_color;
uniform float colorMixFactor : hint_range(0, 10) = 1;
uniform float glowFactor = 2.5;



uniform float speed : hint_range(0.0, 1.0) = 0.5;
uniform float xStretch = 1.0;
uniform float yStretch = 0.1;

uniform float minAlpha = 0.3;

uniform float lazerSize : hint_range(0.0, 1.0) = 0.5;
uniform float wobbliness : hint_range(0, 1) = 0.1;

void fragment(){
	vec2 stretchedUV = UV;
	stretchedUV.x *= xStretch;
	stretchedUV.y *= yStretch;
	
	float intensity1 = textureLod(NOISE_PATTERN1, stretchedUV + TIME * scroll1 * speed, 0.0).r;
	float intensity2 = textureLod(NOISE_PATTERN2, stretchedUV + TIME * scroll2 * speed, 0.0).r;
	float intensity  = intensity1 * intensity2;
	
	float centrality = (1.0 - abs(UV.y - 0.5)) * 0.5;
	if (wobbliness * intensity + (1.0 - wobbliness) * centrality > 1.0 - lazerSize){
		intensity *= centrality;
		COLOR = mix(color1, color2, clamp(intensity * colorMixFactor, 0.0, 1.0)) * glowFactor;
		
		float alpha = textureLod(TRANSPARENCY_VARIATION, stretchedUV + TIME * scroll1 * speed, 0.0).r;
		COLOR.a = minAlpha + alpha * (1.0 - minAlpha);
	}
	
}


"

[sub_resource type="OpenSimplexNoise" id=8]
period = 94.7
persistence = 1.0
lacunarity = 4.0

[sub_resource type="NoiseTexture" id=9]
bump_strength = 7.3
noise = SubResource( 8 )

[sub_resource type="OpenSimplexNoise" id=10]
period = 93.0
persistence = 1.0
lacunarity = 2.93

[sub_resource type="NoiseTexture" id=11]
width = 1024
height = 256
seamless = true
noise = SubResource( 10 )

[sub_resource type="OpenSimplexNoise" id=14]
octaves = 4
period = 46.0
persistence = 1.0
lacunarity = 4.0

[sub_resource type="NoiseTexture" id=15]
width = 1024
height = 1024
noise = SubResource( 14 )
noise_offset = Vector2( 0, 5 )

[sub_resource type="ShaderMaterial" id=18]
shader = SubResource( 7 )
shader_param/scroll1 = Vector2( -0.5, 0.205 )
shader_param/scroll2 = Vector2( 0.2, 0.2 )
shader_param/color1 = Color( 1, 0, 0, 1 )
shader_param/color2 = Color( 3, 2.67188, 0, 1 )
shader_param/colorMixFactor = 1.86615
shader_param/glowFactor = 1.485
shader_param/speed = 0.844
shader_param/xStretch = 2.858
shader_param/yStretch = 0.347
shader_param/minAlpha = 0.522
shader_param/lazerSize = 0.7
shader_param/wobbliness = 0.419
shader_param/NOISE_PATTERN1 = SubResource( 9 )
shader_param/NOISE_PATTERN2 = SubResource( 11 )
shader_param/TRANSPARENCY_VARIATION = SubResource( 15 )

[sub_resource type="Curve" id=19]
_data = [ Vector2( 0, 0.190909 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="ShaderMaterial" id=20]
shader = SubResource( 7 )
shader_param/scroll1 = Vector2( -0.747, 0 )
shader_param/scroll2 = Vector2( 0.109, 0 )
shader_param/color1 = Color( 1, 0.631373, 0.631373, 1 )
shader_param/color2 = Color( 3, 2.67188, 0, 1 )
shader_param/colorMixFactor = 5.216
shader_param/glowFactor = 3.098
shader_param/speed = 1.0
shader_param/xStretch = 0.784
shader_param/yStretch = 0.347
shader_param/minAlpha = 0.522
shader_param/lazerSize = 0.7
shader_param/wobbliness = 0.35
shader_param/NOISE_PATTERN1 = SubResource( 9 )
shader_param/NOISE_PATTERN2 = SubResource( 11 )
shader_param/TRANSPARENCY_VARIATION = SubResource( 15 )

[sub_resource type="Curve" id=21]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 239.362, 478.723 )

[sub_resource type="Animation" id=1]
resource_name = "MechActivate"
length = 1.05
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Body/ActivationSprite:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 6, 5, 7, 8, 9, 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/ActivationSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 280 ), Vector2( 0, 250 ), Vector2( 0, 200 ), Vector2( 0, 100 ), Vector2( 0, 50 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/HoverFlames:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.35, 0.4, 1.05 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Body/HoverFlames:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 300 ), Vector2( 0, 250 ), Vector2( -50, 200 ), Vector2( 0, 150 ), Vector2( -50, 50 ), Vector2( -100, 0 ), Vector2( 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Body/HoverFlames:modulate")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.290196 ), Color( 1, 1, 1, 0.447059 ), Color( 1, 1, 1, 0.658824 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Body/HoverFlames:points")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ PoolVector2Array( 88, 30.1025, 59.4415, 44.1489, -0.398936, 42.8192, -75.7979, -0.265957 ), PoolVector2Array( 88, 30.1025, 59.4415, 44.1489, -0.398936, 42.8192, -70, -1.03802 ), PoolVector2Array( 88, 30.1025, 63, 50.8629, 0, 54.9202, -70, -1.03802 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Body/ActivationSprite:visible")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.14, 0.15, 0.94, 0.95, 1.03, 1.04 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ true, false, true, true, false, true, false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Body/HoverSprite:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1.03, 1.04 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, false, true ]
}

[sub_resource type="Animation" id=3]
resource_name = "MechHover"
length = 0.44
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body/HoverSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/HoverFlames:points")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ PoolVector2Array( 88, 30.1025, 63, 50.8629, 2, 64, -76, 9 ), PoolVector2Array( 85, 27.6521, 47, 54.3167, -10, 57.2794, -80, 6.91303 ), PoolVector2Array( 85, 27.6521, 55, 46.9916, -7, 46.9916, -75, -0.999821 ), PoolVector2Array( 88, 30.1025, 63, 50.8629, 7, 62.281, -70, -1.03802 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/HoverFlames:material:shader_param/colorMixFactor")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 1.742, 1.946, 2.165, 1.901 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Body/HoverSprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Body/HoverFlames:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Body/HoverFlames:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Body/HoverFlames:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Body/ActivationSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[node name="Mech" type="KinematicBody2D"]
scale = Vector2( 0.094, 0.094 )
z_index = -1
collision_layer = 4
script = ExtResource( 3 )
speed = 80.0
acceleration = 1000.0
air_acceleration = 1000.0

[node name="Body" type="Node2D" parent="."]

[node name="ActivationSprite" type="Sprite" parent="Body"]
position = Vector2( 0, 280 )
z_index = 1
texture = ExtResource( 1 )
hframes = 3
vframes = 4
region_rect = Rect2( 0, 0, 40, 64 )

[node name="HoverSprite" type="Sprite" parent="Body"]
visible = false
z_index = 1
texture = ExtResource( 2 )
hframes = 2
vframes = 3
frame = 4
region_rect = Rect2( 0, 0, 40, 64 )

[node name="Hitbox" type="Area2D" parent="Body"]
script = ExtResource( 7 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Body/Hitbox"]
visible = false
scale = Vector2( 8, 8 )
polygon = PoolVector2Array( 53, -33, 67, -23, 79, -15, 84, 0, 85, 26, 77, 36, 47, 50, 35, 54, -3, 54, -19, 47, -35, 63, -50, 69, -65, 70, -76, 59, -84, 49, -80, 35, -74, 27, -74, 14, -85, 12, -90, 5, -90, -7, -73, -25, -70, -28, -69, -43, -65, -59, -50, -66, -36, -69, 2, -69, 11, -64, 24, -58, 35, -51, 44, -43 )

[node name="Raycasts" type="Node2D" parent="Body"]

[node name="FloorRaycast" type="RayCast2D" parent="Body/Raycasts"]
enabled = true
cast_to = Vector2( 0, 478.723 )

[node name="HoverFlames" type="Line2D" parent="Body"]
visible = false
modulate = Color( 1, 1, 1, 0.290197 )
show_behind_parent = true
material = SubResource( 18 )
position = Vector2( 0, 300 )
scale = Vector2( 8, 8 )
z_index = 1
points = PoolVector2Array( 88, 30.1025, 59.4415, 44.1489, -0.398936, 42.8192, -75.7979, -0.265957 )
width = 70.0
width_curve = SubResource( 19 )
default_color = Color( 1, 1, 1, 0 )
texture_mode = 2
round_precision = 32

[node name="RunFlames" type="Line2D" parent="Body"]
visible = false
show_behind_parent = true
material = SubResource( 20 )
scale = Vector2( 8, 7.70652 )
z_index = 1
points = PoolVector2Array( 7, -1.03808, -66, -35.2948, -87, -39.4471, -106, -51.9041, -131, -62.2849 )
width = 60.0
width_curve = SubResource( 21 )
default_color = Color( 1, 1, 1, 0 )
texture_mode = 2
end_cap_mode = 2
round_precision = 3

[node name="HoverArea" type="Area2D" parent="Body"]
scale = Vector2( 8, 8 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Body/HoverArea"]
visible = false
polygon = PoolVector2Array( -86, 6, -87, 30, -87, 55, -88, 76, -63, 77, 96, 80, 95, 61, 92, 42, 87, 28, 76, 41, 58, 51, 38, 58, 2, 58, -28, 43, -73, 21 )

[node name="ActivationArea" type="Area2D" parent="Body"]
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/ActivationArea"]
position = Vector2( 271.277, -10.6382 )
scale = Vector2( 1, 1 )
shape = SubResource( 22 )

[node name="PlayerSpawnPosition" type="Position2D" parent="Body"]
position = Vector2( 42.5532, 95.7446 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
playback_process_mode = 0
anims/MechActivate = SubResource( 1 )
anims/MechHover = SubResource( 3 )
anims/RESET = SubResource( 2 )
script = ExtResource( 9 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
scale = Vector2( 7.121, 7.678 )
polygon = PoolVector2Array( 85.1542, -22.1689, 103.081, -4.15667, 103.081, 24.94, 82.1663, 41.5667, 49.2998, 52.6511, -1.49393, 51.2656, -17.9272, 44.3378, -35, 63, -65, 70, -84, 49, -80, 35, -74, 27, -74, 14, -90, 5, -90, -7, -70, -28, -65, -59, -50, -66, -36, -69, 2, -69, 31.3726, -62.35 )

[node name="StateMachine" type="Node2D" parent="."]
script = ExtResource( 4 )
state_scripts = [ ExtResource( 6 ), ExtResource( 5 ) ]
start_state = "MechNotActive"

[node name="Timers" type="Node2D" parent="."]

[node name="RunTimer" type="Timer" parent="Timers"]
wait_time = 1.5
one_shot = true

[node name="RunCooldown" type="Timer" parent="Timers"]
wait_time = 2.0
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[connection signal="animation_finished" from="AnimationPlayer" to="AnimationPlayer" method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timers/RunTimer" to="." method="_on_RunTimer_timeout"]
[connection signal="timeout" from="Timers/RunCooldown" to="." method="_on_RunCooldown_timeout"]
